--- a/templates/assistants.html
+++ b/templates/assistants.html
@@ -27,30 +27,30 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-<li class="active">{% trans 'assistants' %}</li>
+<li class="active">{% trans 'Assistants' %}</li>
 {% endblock %}
 {% block content %}
 <div class="page-header">
-    <h3>{% trans 'assistants' %}</h3>
+    <h3>{% trans 'Assistants' %}</h3>
 </div>
 <div class="panel panel-default">
     <div class="panel-body">
         <form method="get" action="#">
             <div class="row">
                 <div class="col-md-3">
-                    <label for="txt_acronym">{% trans 'acronym'%}</label>
-                    <input class="form-control" id="txt_acronym" placeholder="{% trans 'acronym' %}" name="acronym"
+                    <label for="txt_acronym">{% trans 'Acronym'%}</label>
+                    <input class="form-control" id="txt_acronym" placeholder="{% trans 'Acronym' %}" name="acronym"
                            value="{{ request.GET.acronym }}" style="text-transform:uppercase">
                 </div>
                 <div class="col-md-5">
-                    <label for="txt_name">{% trans 'name'%}</label>
-                    <input class="form-control" placeholder="{% trans 'name' %}" id="txt_name" name="name"
+                    <label for="txt_name">{% trans 'Name'%}</label>
+                    <input class="form-control" placeholder="{% trans 'Name' %}" id="txt_name" name="name"
                            value="{{ request.GET.name }}" style="text-transform:uppercase">
                 </div>
                 <div class="col-md-2">
-                    <label for="slt_type">{% trans 'type'%}</label><br>
+                    <label for="slt_type">{% trans 'Type'%}</label><br>
                     <select class="form-control" id="slt_type" name="type_choices">
-                        <option selected value="">{% trans 'types'%}...</option>
+                        <option selected value="">{% trans 'Types'%}...</option>
                         {% for type in types %}
                             <option value="{{ type.0 }}" {% if request.GET.type_choices == type.0 %}selected{% endif %}>
                                 {{ type.1 }}
@@ -61,11 +61,11 @@
                 <div class="col-md-2">
                     <br>
                     <button type="submit" id="bt_submit_organization_search" class="btn btn-primary" role="button"
-                            title="{% trans 'search_for_an_organization' %}"><span class="fas fa-search"
+                            title="{% trans 'Search for an organization' %}"><span class="fas fa-search"
                                                                                    aria-hidden="true"></span></button>
 
                     <a href="{% url 'organization_create' %}" id="lnk_organization_create" class="btn btn-default"
-                       role="button" title="{% trans 'create_an_organization'%}"><span class="fas fa-plus"
+                       role="button" title="{% trans 'Create an organization'%}"><span class="fas fa-plus"
                                                                                        aria-hidden="true"></span></a>
                 </div>
             </div>
@@ -77,13 +77,13 @@
         {% else%}
         <div>
             {% if organizations|length == 0 %}
-                <label class="alert alert-info" style="margin:5px">{% trans 'no_result' %}</label>
+                <label class="alert alert-info" style="margin:5px">{% trans 'No result' %}</label>
             {% else %}
                 <table class="table table-striped table-hover">
                     <thead>
-                    <th>{% trans 'acronym'%}</th>
-                    <th>{% trans 'name'%}</th>
-                    <th>{% trans 'type'%}</th>
+                    <th>{% trans 'Acronym'%}</th>
+                    <th>{% trans 'Name'%}</th>
+                    <th>{% trans 'Type'%}</th>
                     </thead>
                     {% for organization in organizations %}
                     <tr>
