--- a/templates/mandate_reviews_view.html
+++ b/templates/mandate_reviews_view.html
@@ -29,12 +29,12 @@
 <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 {% endblock %}
 {% block breadcrumb %}
-<li><a href="{% url 'assistant_mandates' %}" id="lnk_my_mandates">{% trans 'my_mandates' %}</a></li>
-<li class="active">{% trans 'mandate_reviews_view' %}</li>
+<li><a href="{% url 'assistant_mandates' %}" id="lnk_my_mandates">{% trans 'My mandates' %}</a></li>
+<li class="active">{% trans 'Reviews' %}</li>
 {% endblock %}
 {% block content %}
 <div class="page-header">
-    <h2>{% trans 'assistant_mandates_renewal' %}</h2>
+    <h2>{% trans 'Assistant mandate renewal application' %}</h2>
 </div>
 <div class="panel panel-default">
     <div class="panel-body">
@@ -42,11 +42,11 @@
         {% if review.reviewer %}
             <h4>{{ review.changed }} - {% trans review.reviewer.role %} : {{ review.reviewer.person }}</h4>
         {% else %}
-            <h4>{{ review.changed }} - {% trans 'PHD_SUPERVISOR' %} : {{ review.mandate.assistant.supervisor }}</h4>
+            <h4>{{ review.changed }} - {% trans 'Thesis promoter' %} : {{ review.mandate.assistant.supervisor }}</h4>
         {% endif %}
         <div class="list-group">
             <div class="list-group-item">
-                <h4 class="list-group-item-text">{% trans 'advice' %}</h4>
+                <h4 class="list-group-item-text">{% trans 'Opinion' %}</h4>
                 <p style="margin-top: 10px;">
                     {% if review.advice == "FAVORABLE" %}
                     <span class="far fa-thumbs-up" style="font-size: 14pt; color: green"
@@ -59,12 +59,12 @@
                     {% trans review.advice %}
                 </p>
                 {% if review.advice != "FAVORABLE" %}
-                    <h4 class="list-group-item-text">{% trans 'justification' %}</h4>
+                    <h4 class="list-group-item-text">{% trans 'Justification' %}</h4>
                     <p style="margin-top: 10px;">
                         {{ review.justification }}
                     </p>
                 {% endif %}
-                <h4 class="list-group-item-text">{% trans 'remark' %}</h4>
+                <h4 class="list-group-item-text">{% trans 'Remark' %}</h4>
                     <p style="margin-top: 10px;">
                         {{ review.remark }}
                     </p>
