--- a/templates/new_document.html
+++ b/templates/new_document.html
@@ -51,8 +51,8 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal"
-                                id="bt_cancel_upload_file_modal">{% trans 'cancel' %}</button>
-                        <input type="submit" class="btn btn-primary" value="{% trans 'save'%}" data-dismiss="modal"
+                                id="bt_cancel_upload_file_modal">{% trans 'Cancel' %}</button>
+                        <input type="submit" class="btn btn-primary" value="{% trans 'Save'%}" data-dismiss="modal"
                                id="bt_upload_document"/>
                         <input type="hidden" name="description" value="" id="hdn_description"/>
                         <input type="hidden" id="hdn_filename" />
