--- a/templates/phd_supervisor_assistants_list.html
+++ b/templates/phd_supervisor_assistants_list.html
@@ -30,22 +30,22 @@
 <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap.min.css' %}">
 {% endblock %}
 {% block breadcrumb %}
-<li class="active">{% trans 'phd_supervisor_assistants_list' %}</li>
+<li class="active">{% trans 'List of files (as a thesis promoter)' %}</li>
 {% endblock %}
 {% block content %}
 <div class="page-header">
     {% if current_reviewer %}
-        <h6>{% trans 'connected_as' %} {{ current_reviewer.person }} ({% trans current_reviewer.role %}) -
+        <h6>{% trans 'You are connected as' %} {{ current_reviewer.person }} ({% trans current_reviewer.role %}) -
             {{ current_reviewer.entity.most_recent_acronym }}</h6>
     {% endif %}
-    <h3>{% trans 'assistant_mandates_renewals' %} {{ year|add:1 }}</h3>
+    <h3>{% trans 'Assistant mandate renewal application processing' %} {{ year|add:1 }}</h3>
     {% if current_reviewer %}
         <ul class="nav nav-tabs">
-            <li><a href="{% url 'reviewer_mandates_list' %}">{% trans 'reviewer_mandates_list' %}</a></li>
-            <li><a href="{% url 'reviewer_mandates_list_todo' %}">{% trans 'reviewer_todo' %}</a></li>
-            <li class="active"><a href="#">{% trans 'phd_supervisor_assistants_list' %}</a></li>
+            <li><a href="{% url 'reviewer_mandates_list' %}">{% trans 'List of files' %}</a></li>
+            <li><a href="{% url 'reviewer_mandates_list_todo' %}">{% trans 'Files that can be treated' %}</a></li>
+            <li class="active"><a href="#">{% trans 'List of files (as a thesis promoter)' %}</a></li>
             {% if can_delegate %}
-                <li><a href="{% url 'reviewer_delegation' %}">{% trans 'reviewer_delegation' %}</a></li>
+                <li><a href="{% url 'reviewer_delegation' %}">{% trans 'Delegation(s)' %}</a></li>
             {% endif %}
         </ul>
     {% endif %}
@@ -56,14 +56,14 @@
         <table id="myTable" class="table table-hover table-condensed table-bordered" cellspacing="0" width="100%">
         <thead>
         <tr>
-        <th>{% trans 'global_id' %}</th>
-        <th>{% trans 'assistant_title' %}</th>
-        <th>{% trans 'entities' %}</th>
-        <th>{% trans 'assistant_type' %}</th>
-        <th>{% trans 'contract_duration' %}</th>
-        <th>{% trans 'eq_fte' %}</th>
-        <th>{% trans 'state' %}</th>
-        <th>{% trans 'action' %}</th>
+        <th>{% trans 'Registration number' %}</th>
+        <th>{% trans 'Assistant' %}</th>
+        <th>{% trans 'Entities' %}</th>
+        <th>{% trans 'Assistant type' %}</th>
+        <th>{% trans 'Contract length' %}</th>
+        <th>{% trans 'Duration of contract (FTE)' %}</th>
+        <th>{% trans 'State' %}</th>
+        <th>{% trans 'Action' %}</th>
         </tr>
         </thead>
         <tbody>
@@ -89,9 +89,9 @@
                     <form method="POST" action="{% url 'phd_supervisor_review_edit' %}">
                         {% csrf_token %}
                         <input type="hidden" name="mandate_id" value="{{ mandate.id }}">
-                        <button type="submit" class="btn btn-link" title="{% trans 'edit'%}">
+                        <button type="submit" class="btn btn-link" title="{% trans 'Edit'%}">
                             <span class="far fa-edit" aria-hidden="true"></span>
-                            {% trans 'edit'%}
+                            {% trans 'Edit'%}
                         </button>
                     </form>
                 </td>
@@ -100,9 +100,9 @@
                     <form method="POST" action="{% url 'phd_supervisor_review_view' %}">
                         {% csrf_token %}
                         <input type="hidden" name="mandate_id" value="{{ mandate.id }}">
-                        <button type="submit" class="btn btn-link" title="{% trans 'view'%}">
+                        <button type="submit" class="btn btn-link" title="{% trans 'View'%}">
                             <span class="far fa-eye" aria-hidden="true"></span>
-                            {% trans 'view'%}
+                            {% trans 'View'%}
                         </button>
                     </form>
                 </td>
